--- a/web/Angular/src/app/pages/main/main.component.html
+++ b/web/Angular/src/app/pages/main/main.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
-<app-form></app-form>
+<app-form [value]="$points"></app-form>
+<div class="table">
+  <app-table [value]="$points"></app-table>
+</div>
+
